--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,20 +9,51 @@
         android:orderInCategory="100"
         android:title="@string/start_measure_option"
         app:showAsAction="never" />
+        <item
+            android:id="@+id/point_format_option"
+            android:orderInCategory="100"
+            android:title="@string/point_format_option"
+            app:showAsAction="never">
+            <menu>
+                <item
+                    android:id="@+id/decimal_format"
+                    android:orderInCategory="100"
+                    android:title="@string/decimal_format_option"
+                    app:showAsAction="never" />
+                <item
+                    android:id="@+id/angle_min_sec_format"
+                    android:orderInCategory="100"
+                    android:title="@string/angle_min_sec_format_option"
+                    app:showAsAction="never" />
+                <item
+                    android:id="@+id/xyz_format"
+                    android:orderInCategory="100"
+                    android:title="@string/xyz_format_option"
+                    app:showAsAction="never" />
+            </menu>
+        </item>
     </group>
     <group android:id="@+id/calc_options">
         <item
-            android:id="@+id/line_calc_option"
+            android:id="@+id/calc_option"
             android:orderInCategory="100"
             android:title="@string/calc_option"
             app:showAsAction="never" />
+
         <item
-            android:id="@+id/save_point_option"
+            android:id="@+id/catching_option"
+            android:orderInCategory="100"
+            android:title="@string/point_catching_option"
+            app:showAsAction="never" />
+
+        <item
+            android:id="@+id/save_data_option"
             android:orderInCategory="100"
             android:title="@string/save_data_option"
             app:showAsAction="never" />
 
     </group>
+
     <group android:id="@+id/exit">
         <item
             android:id="@+id/exit_option"
