--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,12 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/StartFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.david.giczi.gpsurvey.FirstFragment"
-        android:label="@string/first_fragment_label"
+        android:id="@+id/StartFragment"
+        android:name="com.david.giczi.gpsurvey.StartFragment"
         tools:layout="@layout/fragment_first">
 
         <action
@@ -18,11 +17,10 @@
     <fragment
         android:id="@+id/SecondFragment"
         android:name="com.david.giczi.gpsurvey.SecondFragment"
-        android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            app:destination="@id/StartFragment" />
     </fragment>
 </navigation>
