--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:id="@+id/start_page"
             android:layout_width="match_parent"
-            android:layout_height="110mm"
+            android:layout_height="606dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
