--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,9 +5,9 @@
 
     <group android:id="@+id/measure_options">
     <item
-        android:id="@+id/start_measure_option"
+        android:id="@+id/gps_measure_option"
         android:orderInCategory="100"
-        android:title="@string/start_measure_option"
+        android:title="@string/GPS_start_option"
         app:showAsAction="never" />
         <item
             android:id="@+id/point_format_option"
