--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -166,8 +166,7 @@
         android:gravity="center"
         android:text="@string/use_all_measured_points"
         android:textSize="16sp"
-        android:fontFamily="sans-serif-light"
-        android:checked="true"/>
+        android:fontFamily="sans-serif-light" />
 
     <Spinner
         android:id="@+id/point_spinner"
