--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -62,12 +62,12 @@
         app:layout_constraintTop_toBottomOf="@+id/file_type_text">
 
         <RadioButton
-            android:id="@+id/kmz_format"
+            android:id="@+id/kml_format"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:fontFamily="sans-serif-light"
-            android:text="@string/kmz_format"
+            android:text="@string/kml_format"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
