--- a/app/src/main/res/layout/fragment_find_point.xml
+++ b/app/src/main/res/layout/fragment_find_point.xml
@@ -9,8 +9,9 @@
     <Spinner
         android:id="@+id/point_spinner"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,6 +43,7 @@
         android:inputType="numberDecimal"
         android:maxLength="9"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +62,7 @@
         android:inputType="numberDecimal"
         android:maxLength="9"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +86,7 @@
         android:id="@+id/direction_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/find_point_direction"
         android:textSize="20sp"
@@ -97,7 +100,7 @@
         android:id="@+id/distance_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/distance"
         android:textSize="20sp"
@@ -111,7 +114,7 @@
         android:id="@+id/velocity_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/velocity"
         android:textSize="20sp"
@@ -125,7 +128,7 @@
         android:id="@+id/look_for_point_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:text="@string/point_catching_option"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
