--- a/app/src/main/res/layout/fragment_find_point.xml
+++ b/app/src/main/res/layout/fragment_find_point.xml
@@ -36,38 +36,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:autofillHints="@null"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:hint="@string/find_point_hint"
         android:inputType="numberDecimal"
         android:maxLength="9"
+        android:textColorHint="#78909C"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_find_point_data_text"
-        android:autofillHints="@null" />
+        app:layout_constraintTop_toBottomOf="@+id/add_find_point_data_text" />
 
     <EditText
         android:id="@+id/find_point_2nd_coordinate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:autofillHints="@null"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:hint="@string/find_point_hint"
         android:inputType="numberDecimal"
         android:maxLength="9"
+        android:textColorHint="#78909C"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/find_point_1st_coordinate"
-        android:autofillHints="@null"/>
+        app:layout_constraintTop_toBottomOf="@+id/find_point_1st_coordinate" />
 
 
     <ImageView
