--- a/app/src/main/res/layout/fragment_find_point.xml
+++ b/app/src/main/res/layout/fragment_find_point.xml
@@ -43,7 +43,6 @@
         android:hint="@string/find_point_hint"
         android:inputType="numberDecimal"
         android:maxLength="9"
-        android:textColorHint="#78909C"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +62,6 @@
         android:hint="@string/find_point_hint"
         android:inputType="numberDecimal"
         android:maxLength="9"
-        android:textColorHint="#78909C"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="1dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/find_point_direction"
         android:textSize="20sp"
@@ -103,6 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="1dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/distance"
         android:textSize="20sp"
@@ -117,6 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="1dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/velocity"
         android:textSize="20sp"
