--- a/app/src/main/res/layout/fragment_find_point.xml
+++ b/app/src/main/res/layout/fragment_find_point.xml
@@ -40,7 +40,7 @@
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
-        android:hint="@string/find_point_hint"
+        android:hint="@string/first_point_hint"
         android:inputType="numberDecimal"
         android:maxLength="9"
         android:textSize="20sp"
@@ -59,7 +59,7 @@
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
-        android:hint="@string/find_point_hint"
+        android:hint="@string/second_point_hint"
         android:inputType="numberDecimal"
         android:maxLength="9"
         android:textSize="20sp"
