--- a/app/src/main/res/layout/fragment_find_point.xml
+++ b/app/src/main/res/layout/fragment_find_point.xml
@@ -75,25 +75,24 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="40dp"
+        android:contentDescription="@string/find_point_arrow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/find_point_2nd_coordinate"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="@string/find_point_arrow" />
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/direction_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="1dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/find_point_direction"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.099"
+        app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/find_point_direction_arrow" />
 
@@ -102,40 +101,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="1dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/distance"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/look_for_point_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintHorizontal_bias="0.076"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/direction_text" />
-
-    <TextView
-        android:id="@+id/velocity_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="1dp"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/velocity"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/distance_text" />
+        app:layout_constraintTop_toBottomOf="@+id/direction_text"
+        app:layout_constraintVertical_bias="0.317" />
 
     <Button
         android:id="@+id/look_for_point_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:text="@string/point_catching_option"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/velocity_text" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
